--- a/index.html
+++ b/index.html
@@ -13,16 +13,13 @@
 		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
-			rel="stylesheet"
-		/>
+		<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet" />
 		<title>Darts Scorer</title>
 	</head>
 	<body>
 		<div class="container-fluid text-center bg-primary" id="scoreboard">
 			<div class="row align-items-center">
-				<div class="col col-6">
+				<div class="col col-6" id="player_area">
 					<p class="name" id="player_name">Me</p>
 					<div class="container text-center">
 						<div class="row">
@@ -37,9 +34,7 @@
 					<p class="score" id="player_score">501</p>
 					<p class="checkout" id="player_checkout"></p>
 					<div class="stats">
-						<p class="last_score">
-							Last Score: <span id="player_last">0</span>
-						</p>
+						<p class="last_score">Last Score: <span id="player_last">0</span></p>
 						<p class="average">
 							AVG: <span id="player_average_leg">0.00</span> /
 							<span id="player_average_overall">0.00</span>
@@ -47,35 +42,27 @@
 						<p class="doubles">DQ: <span id="player_doubles">0.00</span>%</p>
 					</div>
 				</div>
-				<div class="col col-6">
+				<div class="col col-6" id="opponent_area">
 					<p class="name" id="opponent_name">Opponent</p>
 					<div class="container text-center">
 						<div class="row">
 							<div class="col">
-								<p class="sets">
-									Sets: <span id="opponent_sets_count">0</span>
-								</p>
+								<p class="sets">Sets: <span id="opponent_sets_count">0</span></p>
 							</div>
 							<div class="col">
-								<p class="legs">
-									Legs: <span id="opponent_legs_count">0</span>
-								</p>
+								<p class="legs">Legs: <span id="opponent_legs_count">0</span></p>
 							</div>
 						</div>
 					</div>
 					<p class="score" id="opponent_score">501</p>
 					<p class="checkout" id="opponent_chackout"></p>
 					<div class="stats">
-						<p class="last_score">
-							Last Score: <span id="opponent_last">0</span>
-						</p>
+						<p class="last_score">Last Score: <span id="opponent_last">0</span></p>
 						<p class="average">
 							AVG: <span id="opponent_average_leg">0.00</span> /
 							<span id="opponent_average_overall">0.00</span>
 						</p>
-						<p class="doubles">
-							DQ: <span id="opponent_double_percentage">0.00</span>%
-						</p>
+						<p class="doubles">DQ: <span id="opponent_double_percentage">0.00</span>%</p>
 					</div>
 				</div>
 			</div>
@@ -83,105 +70,242 @@
 		<div class="container-fluid bg-secondary" id="input">
 			<div class="row text-center">
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-danger" id="undo" value="undo" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">
+					<button
+						class="btn btn-lg btn-outline-danger"
+						id="undo"
+						value="undo"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
 						<img src="icons/undo.svg" alt="" />
 					</button>
 				</div>
 				<div class="col-6 gx-0">
-					<button class="btn btn-lg btn-outline-dark" id="btn-input-score" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">
+					<button
+						class="btn btn-lg btn-outline-dark"
+						id="btn-input-score"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
 						0
 					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-success" id="togo" value="togo" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">
+					<button
+						class="btn btn-lg btn-outline-success"
+						id="togo"
+						value="togo"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
 						<img src="icons/togo.svg" alt="" />
 					</button>
 				</div>
 			</div>
 			<div class="row text-center">
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="26" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">
+					<button
+						class="btn btn-lg btn-outline-dark hotkey"
+						value="26"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
 						26
 					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark" value="1" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">1</button>
+					<button
+						class="btn btn-lg btn-outline-dark"
+						value="1"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
+						1
+					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark" value="2" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">2</button>
+					<button
+						class="btn btn-lg btn-outline-dark"
+						value="2"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
+						2
+					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark" value="3" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">3</button>
+					<button
+						class="btn btn-lg btn-outline-dark"
+						value="3"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
+						3
+					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="81" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">
+					<button
+						class="btn btn-lg btn-outline-dark hotkey"
+						value="81"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
 						81
 					</button>
 				</div>
 			</div>
 			<div class="row text-center">
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="41" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">
+					<button
+						class="btn btn-lg btn-outline-dark hotkey"
+						value="41"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
 						41
 					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark" value="4" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">4</button>
+					<button
+						class="btn btn-lg btn-outline-dark"
+						value="4"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
+						4
+					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark" value="5" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">5</button>
+					<button
+						class="btn btn-lg btn-outline-dark"
+						value="5"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
+						5
+					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark" value="6" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">6</button>
+					<button
+						class="btn btn-lg btn-outline-dark"
+						value="6"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
+						6
+					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="85" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">
+					<button
+						class="btn btn-lg btn-outline-dark hotkey"
+						value="85"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
 						85
 					</button>
 				</div>
 			</div>
 			<div class="row text-center">
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="45" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">
+					<button
+						class="btn btn-lg btn-outline-dark hotkey"
+						value="45"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
 						45
 					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark" value="7" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">7</button>
+					<button
+						class="btn btn-lg btn-outline-dark"
+						value="7"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
+						7
+					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark" value="8" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">8</button>
+					<button
+						class="btn btn-lg btn-outline-dark"
+						value="8"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
+						8
+					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark" value="9" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">9</button>
+					<button
+						class="btn btn-lg btn-outline-dark"
+						value="9"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
+						9
+					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="100" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">
+					<button
+						class="btn btn-lg btn-outline-dark hotkey"
+						value="100"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
 						100
 					</button>
 				</div>
 			</div>
 			<div class="row text-center">
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="60" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">
+					<button
+						class="btn btn-lg btn-outline-dark hotkey"
+						value="60"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
 						60
 					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-danger" value="clear" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">
+					<button
+						class="btn btn-lg btn-danger"
+						value="clear"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
 						<img src="icons/clear.svg" alt="" />
 					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark" value="0" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">0</button>
+					<button
+						class="btn btn-lg btn-outline-dark"
+						value="0"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
+						0
+					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-success" value="okay" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">
+					<button
+						class="btn btn-lg btn-success"
+						value="okay"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
 						<img src="icons/okay.svg" alt="" />
 					</button>
 				</div>
 				<div class="col gx-0">
-					<button class="btn btn-lg btn-outline-dark hotkey" value="140" tabindex="-1" ontouchstart="doubleTapPreventZoom(event)">
+					<button
+						class="btn btn-lg btn-outline-dark hotkey"
+						value="140"
+						tabindex="-1"
+						ontouchstart="doubleTapPreventZoom(event)"
+					>
 						140
 					</button>
 				</div>
@@ -192,7 +316,7 @@
 			integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 			crossorigin="anonymous"
 		></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-        <script src="js/script.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+		<script src="js/script.js"></script>
 	</body>
 </html>
